# mission-control

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
docs/: FUTURE_IDEAS.md
mission_control/: __init__.py  __main__.py  main.py  metrics.py
mission_control/static/: app.js  index.html  style.css
