[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-control"
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "psutil>=6.0.0",
]

[project.scripts]
mission-control = "mission_control.__main__:main"

[tool.setuptools.packages.find]
include = ["mission_control*"]
